<resources>
    <string name="app_name">Waterfront</string>
    <string name="_00_00">00/00</string>
    <string name="vendor">vendor</string>
    <string name="_0_000_00">±$0,000.00</string>
    <string name="_000_00">±$000.00</string>
    <string name="receipt">Receipt?</string>
    <string name="on_statement">On statement?</string>
    <string name="recurring">Recurring?</string>
    <string name="_0_000_mo">$0,000/mo</string>
    <string name="_000_wk">$000/wk</string>
    <string name="hyphen">-</string>
    <string name="due_date">Due date:</string>
    <string name="cap">Cap:</string>
    <string name="category_name">Category Name</string>
    <string name="expense_log">Expense Log</string>
    <string name="budget_planner">Budget Planner</string>
    <string-array name="category_periodicity">
        <item>Weekly (52/yr)</item>
        <item>Biweekly (26/yr)</item>
        <item>Semimonthly (24/yr)</item>
        <item>Monthly (12/yr)</item>
        <item>Quarterly (4/yr)</item>
        <item>Triannual (3/yr)</item>
        <item>Semiannually (2/yr)</item>
        <item>Annually (1/yr)</item>
        <item>Yearly (1/yr)</item>
    </string-array>
    <string-array name="category">
        <item>Account Transfer</item>
        <item>Fuel (car)</item>
        <item>Insurance (car)</item>
        <item>Loans (car)</item>
        <item>Registration (car)</item>
        <item>Shop (car)</item>
        <item>Charity (general)</item>
        <item>Church (charity)</item>
        <item>Fast Offering (charity)</item>
        <item>Missions</item>
        <item>Tithing</item>
        <item>Food (consumables)</item>
        <item>Non-food (consumables)</item>
        <item>Household (home)</item>
        <item>Mortgage (home)</item>
        <item>Office (home)</item>
        <item>Repairs (home)</item>
        <item>Utilities (home)</item>
        <item>Yards (home)</item>
        <item>Gifts (general)</item>
        <item>Mad Money</item>
        <item>Copay (personal health)</item>
        <item>Personal Health (general)</item>
        <item>Dental (personal health)</item>
        <item>Education (personal health)</item>
        <item>Insurance Premium</item>
        <item>Vision</item>
        <item>Prescriptions</item>
        <item>Entertainment</item>
        <item>Services</item>
    </string-array>
    <string-array name="tender">
        <item>CA-cash</item>
        <item>CC-Chase credit card</item>
        <item>CK-checking</item>
        <item>DB-disbursement</item>
        <item>DC-debit card</item>
        <item>FA-Flexible Spending Account</item>
        <item>GC-gift card</item>
        <item>IN-income</item>
        <item>LC-Lowe\'s credit card</item>
        <item>PP-Paypal</item>
        <item>RE-reimbursement</item>
        <item>TR-transfer</item>
        <item>VM-Venmo</item>
    </string-array>
</resources>